[tool.poetry]
name = "dml"
version = "0.1.0"
description = ""
authors = ["Tsuyoshi <tsuyoshi.ueno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
econml = "^0.15.1"
seaborn = "^0.13.2"
jupyterlab = "^4.4.4"
lightgbm = "^4.6.0"
ipywidgets = "^8.1.7"
optuna = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
